--- a/index.html
+++ b/index.html
@@ -20,34 +20,36 @@
     </aside>
   
    <content>
-    <img src="images/bruce-dixon-383618-unsplash.jpg">
-    <img src="images/bruce-mars-558664-unsplash.jpg">
-    <img src="images/caique-silva-541779-unsplash.jpg">
-    <img src="images/daiga-ellaby-718861-unsplash.jpg">
-    <img src="images/ian-dooley-298769-unsplash.jpg">
-    <img src="images/kinga-cichewicz-639968-unsplash.jpg">
-    <img src="images/bruce-dixon-383618-unsplash.jpg">
-    <img src="images/bruce-mars-558664-unsplash.jpg">
-    <img src="images/caique-silva-541779-unsplash.jpg">
-    <img src="images/daiga-ellaby-718861-unsplash.jpg">
-    <img src="images/ian-dooley-298769-unsplash.jpg">
-    <img src="images/kinga-cichewicz-639968-unsplash.jpg">
-    <img src="images/bruce-dixon-383618-unsplash.jpg">
-    <img src="images/bruce-mars-558664-unsplash.jpg">
-    <img src="images/caique-silva-541779-unsplash.jpg">
-    <img src="images/daiga-ellaby-718861-unsplash.jpg">
-    <img src="images/ian-dooley-298769-unsplash.jpg">
-    <img src="images/kinga-cichewicz-639968-unsplash.jpg">
-    <img src="images/bruce-dixon-383618-unsplash.jpg">
-    <img src="images/bruce-mars-558664-unsplash.jpg">
-    <img src="images/caique-silva-541779-unsplash.jpg">
-    <img src="images/daiga-ellaby-718861-unsplash.jpg">
-    <img src="images/ian-dooley-298769-unsplash.jpg">
-    <img src="images/kinga-cichewicz-639968-unsplash.jpg">
-    <img src="images/daiga-ellaby-718861-unsplash.jpg">
-    <img src="images/ian-dooley-298769-unsplash.jpg">
-    <img src="images/kinga-cichewicz-639968-unsplash.jpg">
-    </content>
+     <div class="container">
+        <img src="images/bruce-dixon-383618-unsplash.jpg">
+        <img src="images/bruce-mars-558664-unsplash.jpg">
+        <img src="images/caique-silva-541779-unsplash.jpg">
+        <img src="images/daiga-ellaby-718861-unsplash.jpg">
+        <img src="images/ian-dooley-298769-unsplash.jpg">
+        <img src="images/kinga-cichewicz-639968-unsplash.jpg">
+        <img src="images/bruce-dixon-383618-unsplash.jpg">
+        <img src="images/bruce-mars-558664-unsplash.jpg">
+        <img src="images/caique-silva-541779-unsplash.jpg">
+        <img src="images/daiga-ellaby-718861-unsplash.jpg">
+        <img src="images/ian-dooley-298769-unsplash.jpg">
+        <img src="images/kinga-cichewicz-639968-unsplash.jpg">
+        <img src="images/bruce-dixon-383618-unsplash.jpg">
+        <img src="images/bruce-mars-558664-unsplash.jpg">
+        <img src="images/caique-silva-541779-unsplash.jpg">
+        <img src="images/daiga-ellaby-718861-unsplash.jpg">
+        <img src="images/ian-dooley-298769-unsplash.jpg">
+        <img src="images/kinga-cichewicz-639968-unsplash.jpg">
+        <img src="images/bruce-dixon-383618-unsplash.jpg">
+        <img src="images/bruce-mars-558664-unsplash.jpg">
+        <img src="images/caique-silva-541779-unsplash.jpg">
+        <img src="images/daiga-ellaby-718861-unsplash.jpg">
+        <img src="images/ian-dooley-298769-unsplash.jpg">
+        <img src="images/kinga-cichewicz-639968-unsplash.jpg">
+        <img src="images/daiga-ellaby-718861-unsplash.jpg">
+        <img src="images/ian-dooley-298769-unsplash.jpg">
+        <img src="images/kinga-cichewicz-639968-unsplash.jpg">
+      </div> 
+  </content>
 
     <nav class="sidebar-right">
       Right Sidebar
